# market-data

./: .gitignore  Cargo.toml  README.md  config.example.toml
docs/: performance_optimization_summary_zh.md  总结 IO 控制  内存控制，以及你说的“Mem 仍然缓慢增长”最可能的原因与排查路径。.md
scripts/: binance-sbe-time-probe.sh  feishu_heartbeat.sh  keyword-candidate-report-all.sh  keyword-candidate-report.sh  market-data-daemon.sh  parquet-stream-counts-all.sh  raw-field-probe.sh  symbol-availability-report.sh
scripts/systemd/: feishu-heartbeat.service  feishu-heartbeat.timer  market-data-merge.service  market-data-merge.timer  market-data.service
src/: lib.rs  main.rs
src/config/: mod.rs
src/exchange/: binance_json.rs  binance_spot_sbe.rs  binance_spot_sbe_decode.rs  gate.rs  kucoin.rs  kucoin_futures.rs  mod.rs
src/schema/: event.rs
src/util/: metrics.rs  mod.rs  pacer.rs  time.rs
src/writer/: csv.rs  jsonl.rs  mod.rs  parquet.rs  rollover.rs
src/ws/: client.rs  mod.rs
tests/: integration_streams.rs
